--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="116dp"
         android:text="hola"
         android:textColor="#C61438"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +39,7 @@
         android:layout_marginTop="365dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="308dp"
-        android:background="#E4E4E4"
-        android:backgroundTint="#FFFFFF"
+        android:background="@drawable/blue_bg"
         android:text=" Puntos de recoleccón"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,19 +48,19 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="143dp"
-        android:layout_height="69dp"
+        android:layout_width="141dp"
+        android:layout_height="58dp"
         android:layout_marginStart="135dp"
         android:layout_marginTop="623dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="50dp"
-        android:background="#FF4141"
-        android:backgroundTint="#FFFFFF"
+        android:background="@drawable/blue_bg"
         android:text="Configuración"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.469" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -102,7 +101,7 @@
         android:layout_marginTop="291dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="382dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/blue_bg"
         android:text="Donar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +116,7 @@
         android:layout_marginTop="448dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="225dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/blue_bg"
         android:text="Eventos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +131,7 @@
         android:layout_marginTop="533dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="140dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/blue_bg"
         android:text="Alimentos requeridos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
