--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -9,144 +9,213 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="99dp"
-        android:layout_height="70dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginBottom="42dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_empresa"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/usuario"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="96dp"
         tools:srcCompat="@drawable/img" />
 
     <TextView
         android:id="@+id/textView_empresa"
         android:layout_width="143dp"
-        android:layout_height="70dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="113dp"
         android:text="banco@correo.com"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="208dp" />
+        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/Nombre"
         android:layout_width="180dp"
-        android:layout_height="52dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginBottom="520dp"
         android:text="Banco de Alimentos "
         android:textColor="#000"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="114dp"
-        tools:layout_editor_absoluteY="176dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bttnPuntos"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="17dp"
         android:background="@drawable/blue_bg"
         android:text=" Puntos de recoleccón"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="457dp" />
+        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="81dp"
         android:background="@drawable/blue_bg"
         android:text="Configuración"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="702dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/editInven" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
-        app:srcCompat="@android:drawable/ic_menu_preferences"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="695dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:srcCompat="@android:drawable/ic_menu_preferences" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
-        app:srcCompat="@android:drawable/ic_menu_mylocation"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="457dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView10"
+        app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:srcCompat="@android:drawable/ic_menu_mylocation" />
 
     <Button
         android:id="@+id/CrearORG"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/blue_bg"
         android:text="Empresas aliadas"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="392dp" />
+        app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView_empresa" />
 
     <Button
         android:id="@+id/bttnEvento"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="13dp"
         android:background="@drawable/blue_bg"
         android:text="Eventos"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="521dp" />
+        app:layout_constraintBottom_toTopOf="@+id/alimentosbtton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/alimentosbtton"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/blue_bg"
         android:text="Buscar Usuarios"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="579dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editInven"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="392dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView7"
+        app:layout_constraintEnd_toStartOf="@+id/CrearORG"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_compass"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="392dp"
         tools:srcCompat="@android:drawable/ic_menu_add" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:srcCompat="@android:drawable/ic_menu_day"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="521dp"
         tools:srcCompat="@android:drawable/ic_menu_agenda" />
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="29dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintEnd_toStartOf="@+id/editInven"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@android:drawable/ic_menu_day"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="637dp"
         tools:srcCompat="@drawable/basket" />
 
     <Button
         android:id="@+id/editInven"
-        android:layout_width="134dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="19dp"
         android:background="@drawable/blue_bg"
         android:text="Editar inventario"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="637dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/alimentosbtton" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="33dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
-        tools:layout_editor_absoluteX="287dp"
-        tools:layout_editor_absoluteY="748dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="95dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
-        app:srcCompat="@android:drawable/ic_menu_search"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="579dp" />
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="29dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView11"
+        app:layout_constraintEnd_toStartOf="@+id/alimentosbtton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:srcCompat="@android:drawable/ic_menu_search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
