--- a/app/src/main/res/layout/activity_main_usuarios.xml
+++ b/app/src/main/res/layout/activity_main_usuarios.xml
@@ -17,6 +17,7 @@
         android:id="@+id/rv"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/row_usuarios"/>
 
 </LinearLayout>
