--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -10,12 +10,11 @@
         android:id="@+id/imageView5"
         android:layout_width="99dp"
         android:layout_height="0dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginBottom="42dp"
+        android:layout_marginBottom="41dp"
         app:layout_constraintBottom_toTopOf="@+id/textView_empresa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Nombre"
         app:srcCompat="@drawable/usuario"
         tools:srcCompat="@drawable/img" />
 
@@ -23,7 +22,7 @@
         android:id="@+id/textView_empresa"
         android:layout_width="143dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="113dp"
+        android:layout_marginBottom="112dp"
         android:text="banco@correo.com"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
@@ -35,52 +34,51 @@
         android:id="@+id/Nombre"
         android:layout_width="180dp"
         android:layout_height="0dp"
-        android:layout_marginTop="176dp"
-        android:layout_marginBottom="520dp"
+        android:layout_marginBottom="69dp"
         android:text="Banco de Alimentos "
         android:textColor="#000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bttnPuntos"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="291dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="291dp"
         android:background="@drawable/blue_bg"
         android:text=" Puntos de recoleccón"
-        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
+        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="81dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="123dp"
+        android:layout_marginBottom="77dp"
         android:background="@drawable/blue_bg"
         android:text="Configuración"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/editInven" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="11dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginEnd="171dp"
+        android:layout_marginBottom="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11"
         app:srcCompat="@android:drawable/ic_menu_preferences" />
@@ -91,9 +89,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="11dp"
         android:layout_marginEnd="29dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView10"
-        app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
+        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9"
         app:srcCompat="@android:drawable/ic_menu_mylocation" />
@@ -102,53 +100,53 @@
         android:id="@+id/CrearORG"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="22dp"
         android:background="@drawable/blue_bg"
         android:text="Empresas aliadas"
-        app:layout_constraintBottom_toTopOf="@+id/bttnPuntos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintBottom_toTopOf="@+id/imageView9"
+        app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
+        app:layout_constraintStart_toStartOf="@+id/bttnPuntos"
         app:layout_constraintTop_toBottomOf="@+id/textView_empresa" />
 
     <Button
         android:id="@+id/bttnEvento"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="51dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginBottom="51dp"
         android:background="@drawable/blue_bg"
         android:text="Eventos"
-        app:layout_constraintBottom_toTopOf="@+id/alimentosbtton"
+        app:layout_constraintBottom_toBottomOf="@+id/buscarUsuario"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
     <Button
-        android:id="@+id/alimentosbtton"
+        android:id="@+id/buscarUsuario"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="11dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/blue_bg"
         android:text="Buscar Usuarios"
         app:layout_constraintBottom_toTopOf="@+id/editInven"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintTop_toTopOf="@+id/imageView10" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="392dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/CrearORG"
+        app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG"
         app:srcCompat="@android:drawable/ic_menu_compass"
         tools:srcCompat="@android:drawable/ic_menu_add" />
 
@@ -160,7 +158,7 @@
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
+        app:layout_constraintEnd_toStartOf="@+id/buscarUsuario"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:srcCompat="@android:drawable/ic_menu_day"
@@ -173,7 +171,7 @@
         android:layout_marginStart="11dp"
         android:layout_marginEnd="29dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
-        app:layout_constraintEnd_toStartOf="@+id/editInven"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@android:drawable/ic_menu_day"
@@ -182,28 +180,26 @@
     <Button
         android:id="@+id/editInven"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="19dp"
         android:background="@drawable/blue_bg"
         android:text="Editar inventario"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/alimentosbtton" />
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18dp"
+        android:layout_marginEnd="17dp"
         android:layout_marginBottom="33dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
+        app:layout_constraintStart_toEndOf="@+id/imageView6" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -213,7 +209,7 @@
         android:layout_marginStart="11dp"
         android:layout_marginEnd="29dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView11"
-        app:layout_constraintEnd_toStartOf="@+id/alimentosbtton"
+        app:layout_constraintEnd_toStartOf="@+id/editInven"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView10"
         app:srcCompat="@android:drawable/ic_menu_search" />
