--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -114,7 +114,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="51dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginBottom="52dp"
         android:background="@drawable/blue_bg"
         android:text="Eventos"
         app:layout_constraintBottom_toBottomOf="@+id/buscarUsuario"
@@ -125,16 +125,16 @@
     <Button
         android:id="@+id/buscarUsuario"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="11dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="107dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="107dp"
         android:background="@drawable/blue_bg"
-        android:text="Buscar Usuarios"
-        app:layout_constraintBottom_toTopOf="@+id/editInven"
+        android:text="Buscar usuarios"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toTopOf="@+id/imageView10" />
+        app:layout_constraintTop_toTopOf="@+id/bttnPuntos" />
 
     <ImageView
         android:id="@+id/imageView9"
