Eventos de la org ya se pueden borrar por el ID y botones configurados

--- a/app/src/main/res/layout/activity_evento_org.xml
+++ b/app/src/main/res/layout/activity_evento_org.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="208dp"
+        android:layout_marginBottom="130dp"
         android:text="Eventos"
         android:textColor="#0B0A0A"
         android:textSize="34sp"
@@ -25,9 +25,9 @@
         android:id="@+id/CrearORG"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="43dp"
         android:backgroundTint="#B5F36C"
         android:onClick="crearEvento"
         android:text="Crear"
@@ -35,45 +35,39 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
+        app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/bttnEvento"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="30dp"
-        android:backgroundTint="#B5F36C"
-        android:text="Editar"
-        android:textColor="#0B0A0A"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:cornerRadius="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/button9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
-
-    <Button
         android:id="@+id/button9"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="216dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="73dp"
         android:backgroundTint="#B5F36C"
+        android:onClick="borrarEvento"
         android:text="Borrar"
         android:textColor="#0B0A0A"
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
+        app:layout_constraintTop_toBottomOf="@+id/button9"
+        app:srcCompat="@drawable/bancodealimentos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
